(executables
  (names main)
  (libraries str menhirLib)
  (preprocess (pps ppx_deriving.show))
  )

;;(install
;;  (section bin)
;;  (files (main.exe as 9ninecc)))

(ocamllex lexer pp_lexer)

(menhir
  (flags
      (--external-tokens Token)
      (--table))
  (modules parser))

(menhir
  (flags
    (--external-tokens Pp_token)
    (--table))
  (modules pp_parser))

(rule
  (targets parser_messages.ml)
  (deps parser.messages parser.mly)
  (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(rule
  (targets pp_parser_messages.ml)
  (deps pp_parser.messages pp_parser.mly)
  (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(env
 (dev
  (flags (:standard -w -g)))
 (release
  (flags (:standard -O3))))
